# Proyecto-Scrabble

./: SocketCliente.pro  mainwindow.ui  socketcliente.cpp  socketserver.h
Proyecto/: CMakeLists.txt  Makefile  Prueba.cpp  main.cpp
Proyecto/Converter/: Converter.cpp  Converter.h  Person.cpp
Proyecto/Dealer/: Dealer.cpp  Dealer.h  Ficha.cpp  Ficha.h  letras.txt
Proyecto/Estructuras/: List.cpp  List.h  Node.cpp  Node.h
Proyecto/Tablero/: Elemento.cpp  Elemento.h  Tablero.cpp  Tablero.h  data.csv
Scrabble/Doxy Servidor/html/: _converter_8h_source.html  _dealer_8h_source.html  _elemento_8h_source.html  _ficha_8h_source.html  _list_8h_source.html  _node_8h_source.html  annotated.html  (+54 more)
Scrabble/Proyecto/: Proyecto.pro  Proyecto.pro.user.ef34494  compile_commands.json  juego.cpp  juego.h  jugador.cpp  jugador.h  main.cpp  socketserver.cpp  socketserver.h
Scrabble/build-Proyecto-Desktop_Qt_5_12_2_GCC_64bit-Debug/: Makefile  Proyecto
Scrabble_cliente/: Converter.cpp  Converter.h  Ficha.cpp  Ficha.h  Scrabble_cliente.pro  Scrabble_cliente.pro.user.1f00408  Scrabble_cliente.pro.user.ef34494  boton.cpp  boton.h  comodin.cpp  comodin.h  controlador.cpp  controlador.h  crear_juego.cpp  crear_juego.h  crear_juego.ui  inicio_ventana.cpp  inicio_ventana.h  inicio_ventana.ui  juego.cpp  juego.h  main.cpp  prueba.cpp  prueba.ui  recursos.qrc  res.qrc  socketcliente.cpp  socketcliente.h  tablero.cpp  tablero.h  unirse_juego.cpp  unirse_juego.h  unirse_juego.ui  ventana_inicial.cpp  ventana_inicial.h  ventana_inicial.ui  ventana_inicio.ui
socket/: main.cpp  socket.pro
(+174 files in other folders)
